<resources>
    <string name="app_name">Taboo Cards</string>
    <string name="start">Start</string>
    <string name="team_1">team1</string>
    <string name="team_2">team2</string>
    <string name="score_1">score_1</string>
    <string name="score_2">score_2</string>
    <string name="easy">easy</string>
    <string name="medium">medium</string>
    <string name="hard">hard</string>
    <string name="random">random</string>
    <string name="difficult_level">Difficult level</string>
    <string name="ok">OK</string>
    <string name="wrong">Wrong</string>
    <string name="skip">Skip</string>
    <string name="settings">settings</string>
    <string name="save_and_set">save and set</string>
    <string name="team_1_name">team 1 name</string>
    <string name="team_2_name">team 2 name</string>
    <string name="tour_time">tour time</string>
    <string name="minus_operator">-</string>
    <string name="plus_operator">+</string>
    <string name="points_to_win">points to win</string>
    <string name="zero">0</string>
    <string name="time_zero">00:00</string>
    <string name="skips_left">Skips left</string>
    <string name="pass_phone">pass phone to another player</string>
    <string name="finish">Finish</string>
    <string name="get_ready">get ready</string>
    <string name="won">won!</string>
    <string name="return_string">return</string>
</resources>