<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/start_game_dialog"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".ui.menu_activity.MenuActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="16dp" />


    <TextView
        android:id="@+id/team1_name_settings_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="36dp"
        android:text="@string/team_1_name"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/team2_name_settings_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/team_2_name"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/team1_name_settings_textView" />

    <TextView
        android:id="@+id/tour_time_textView_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="48dp"
        android:text="@string/tour_time"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/team2_name_settings_textView" />

    <Button
        android:id="@+id/minus_button_settings_dialog"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="28dp"
        android:text="@string/minus_operator"
        app:layout_constraintStart_toEndOf="@+id/tour_time_textView_settings"
        app:layout_constraintTop_toBottomOf="@+id/team2_name_settings_editText" />

    <Button
        android:id="@+id/plus_button_settings_dialog"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="28dp"
        android:text="@string/plus_operator"
        app:layout_constraintStart_toEndOf="@+id/timer_settings_dialog"
        app:layout_constraintTop_toBottomOf="@+id/team2_name_settings_editText" />

    <EditText
        android:id="@+id/timer_settings_dialog"
        android:layout_width="66dp"
        android:layout_height="36dp"
        android:layout_marginTop="32dp"
        android:gravity="center"
        android:inputType="number"
        android:textSize="15sp"
        app:layout_constraintStart_toEndOf="@+id/minus_button_settings_dialog"
        app:layout_constraintTop_toBottomOf="@+id/team2_name_settings_editText" />

    <EditText
        android:id="@+id/team1_name_settings_editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/team_1"
        android:inputType="textPersonName"
        app:layout_constraintStart_toEndOf="@+id/team1_name_settings_textView"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/team2_name_settings_editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/team_2"
        android:inputType="textPersonName"
        app:layout_constraintStart_toEndOf="@+id/team2_name_settings_textView"
        app:layout_constraintTop_toBottomOf="@+id/team1_name_settings_editText" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="52dp"
        android:text="@string/points_to_win"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tour_time_textView_settings" />

    <EditText
        android:id="@+id/editTextNumber"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="28dp"
        android:gravity="center"
        android:inputType="number"
        android:text="30"
        android:textSize="15sp"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/timer_settings_dialog" />

    <Button
        android:id="@+id/save_and_set_button_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="304dp"
        android:layout_marginEnd="60dp"
        android:text="@string/save_and_set"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>
